--------
v4.0-git
--------

[gwr] Fixed deletion of shares with the Kolab driver.
[jan] Fix display of note title (Bug #11275).


----------
v3.0.7-git
----------

[jan] Update Turkish translation (İstanbul Technical University).


------
v3.0.6
------

[jan] Update Swedish translation (Per Olof Ljungmark <peo@bsdlabs.com>).
[jan] Update Italian translation (Massimo Malabotta <mmalabotta@units.it>).
[jan] Update Hungarian translation (Zoltán Németh <nemeth.zoltan@etit.hu>).


------
v3.0.5
------

[mjr] Add missing getChanges API method.


------
v3.0.4
------

[jan] Use locale based sorting.
[jan] Fix remembering the expansion state of the notepads panel (Bug #10797).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


------
v3.0.3
------

[jan] Add Estonian translation (Alar Sing <alar.sing@err.ee>).
[gwr] Avoid including the owner name into the default share (Kolab backend).
[mjr] Fix removeUserData implementation.


------
v3.0.2
------

[jan] Don't load all shares with requested permissions from the backend if
      $conf['share']['hidden'] is enabled.


------
v3.0.1
------

[jan] Fix accidental encryption of notes (Bug #9981).
[jan] Fix color picker for categories in the note list header (Bug #9980).


----
v3.0
----

[jan] Fix generating tooltip previews of encrypted notes.
[jan] Fix application-specific permission checks (Bug #9786).
[mjr] Datatree share to SQL upgrade script refactored for Horde 4.
[mjr] Default sorting criteria by creation date (Bug #7332).
[jan] Move all executable scripts to bin/ and prefix with mnemo-.


--------
v3.0-RC1
--------

[jan] Update installation and upgrade instructions.
[gwr] Adapted the Kolab driver to Horde 4.


----------
v3.0-BETA1
----------

[jan] Fix PDF generation.
[jan] Fix encrypting and decrypting of notes.


-----------
v3.0-ALPHA1
-----------

[jan] Provide default configuration files instead of .dist versions.
[jan] Default notepads no longer have the user name as the ID.