@@ -37,4 +37,14 @@ extends Mnemo_Notepads_Base
     {
         return _("Notes");
     }
+
+    /**
+     * Add any modifiers required to the share in order to mark it as default.
+     *
+     * @param Horde_Share_Object $share The new default share.
+     */
+    protected function prepareDefaultShare($share)
+    {
+        $share->set('default', true);
+    }
 }
