@@ -2,6 +2,7 @@
 v4.0-git
 --------
 
+[gwr] Mark the initial default share as such with the Kolab backend.
 [gwr] Fixed deletion of shares with the Kolab driver.
 [jan] Fix display of note title (Bug #11275).
 
